--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,18 @@
+.App {
+  text-align: center;
 /* Import the 7-segment display font */
 @font-face {
   font-family: 'Digital-7';
-  src: url('path/to/digital-7.ttf') format('truetype');
+  src: url('/src/Fonts/digital-7.ttf') format('truetype');
 }
 
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 .calculator {
-  width: 400px; /* Increased width */
+  width: 300px;
   margin: 50px auto;
-  padding: 30px; /* Increased padding */
+  padding: 20px;
   border-radius: 10px;
   background: rgba(0, 0, 0, 0.8); /* Black background with opacity */
   backdrop-filter: blur(10px); /* Blur effect */
@@ -15,12 +20,16 @@
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3); /* Soft shadow */
 }
 
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 .calculator-input {
   width: 100%;
-  height: 60px; /* Increased height */
+  height: 50px;
   margin-bottom: 20px;
-  padding: 15px; /* Increased padding */
-  font-size: 32px; /* Increased font size */
+  padding: 10px;
+  font-size: 24px;
   border: none; /* No border */
   border-radius: 5px;
   box-sizing: border-box;
@@ -31,15 +40,26 @@
   font-family: 'Digital-7', sans-serif; /* Apply 7-segment font to numbers */
 }
 
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 .calculator-buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 15px; /* Increased gap */
+  gap: 10px;
 }
 
+.App-link {
+  color: #61dafb;
 .calculator-buttons button {
-  height: 60px; /* Increased height */
-  font-size: 24px; /* Increased font size */
+  height: 50px;
+  font-size: 18px;
   border: none; /* No border */
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.1); /* Semi-transparent background */
@@ -49,6 +69,13 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Soft shadow */
 }
 
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 .calculator-buttons button:hover {
   background-color: rgba(255, 255, 255, 0.2); /* Lighter background on hover */
 }
